--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -710,6 +710,74 @@
         "table": {
           "title": "High Risk Sessions",
           "subtitle": "Sessions with high or critical abandonment risk"
+        },
+        "help": {
+          "title": "How Predictions Work",
+          "subtitle": "Learn about risk scores, model accuracy, and how to interpret prediction data",
+          "riskScores": {
+            "title": "Risk Scores & Levels",
+            "riskScore": {
+              "title": "Risk Score",
+              "description": "A numerical value (0-100) that indicates the likelihood of checkout abandonment. Higher scores mean higher risk. The score is calculated using machine learning models that analyze user behavior patterns."
+            },
+            "riskLevels": {
+              "title": "Risk Levels",
+              "description": "Sessions are categorized into four risk levels: Low (0-30%), Medium (31-50%), High (51-70%), and Critical (71-100%). Each level represents a different probability of abandonment and may trigger different interventions."
+            },
+            "prediction": {
+              "title": "How Predictions Work",
+              "description": "Predictions are made in real-time using AI models that analyze user behavior, checkout progress, time spent, errors encountered, and historical patterns. The model continuously learns and improves accuracy."
+            }
+          },
+          "metrics": {
+            "title": "Key Metrics",
+            "totalSessions": {
+              "title": "Total Sessions",
+              "description": "The total number of checkout sessions in the selected time period. This includes all sessions regardless of their risk level or outcome."
+            },
+            "highRisk": {
+              "title": "High Risk Sessions",
+              "description": "The number of sessions classified as High or Critical risk. These sessions have a 51%+ probability of abandonment and may benefit from interventions."
+            },
+            "avgRisk": {
+              "title": "Average Risk Score",
+              "description": "The average risk score across all sessions in the period. A higher average indicates more at-risk sessions overall. Compare this metric over time to track trends."
+            },
+            "modelAccuracy": {
+              "title": "Model Accuracy",
+              "description": "The prediction model's accuracy rate, measured by comparing predictions to actual outcomes. Higher accuracy means more reliable predictions. Models are continuously trained and improved."
+            }
+          },
+          "model": {
+            "title": "Prediction Model",
+            "howItWorks": {
+              "title": "How the Model Works",
+              "description": "The AI model analyzes multiple factors including checkout step progress, time spent on each step, error frequency, form completion rates, and historical conversion patterns to predict abandonment risk."
+            },
+            "features": {
+              "title": "Features Analyzed",
+              "description": "The model considers: step duration, error count, field completion rates, session duration, device type, browser behavior, and historical user patterns to make accurate predictions."
+            },
+            "accuracy": {
+              "title": "Model Accuracy",
+              "description": "Accuracy is measured by comparing predicted risk levels to actual outcomes. The model is continuously retrained with new data to improve accuracy over time. Typical accuracy ranges from 85-95%."
+            }
+          },
+          "charts": {
+            "title": "Charts & Tables",
+            "distribution": {
+              "title": "Risk Distribution Chart",
+              "description": "Shows the distribution of sessions across different risk levels (Low, Medium, High, Critical). Helps identify the proportion of at-risk sessions in your checkout funnel."
+            },
+            "trend": {
+              "title": "Risk Trend Chart",
+              "description": "Displays the average risk score over time, allowing you to track trends and identify periods with higher or lower abandonment risk. Useful for measuring the impact of optimizations."
+            },
+            "table": {
+              "title": "Predictions Table",
+              "description": "Lists individual high-risk sessions with session ID, risk score, risk level, prediction timestamp, and current status. Use this to identify specific sessions that may need attention."
+            }
+          }
         }
       },
       "interventions": {
@@ -834,6 +902,85 @@
         "table": {
           "title": "User Profiles",
           "subtitle": "List of user profiles in the selected period"
+        },
+        "help": {
+          "title": "How Personalization Works",
+          "subtitle": "Learn about user profiles, device detection, and personalization features",
+          "profiles": {
+            "title": "User Profiles",
+            "whatAre": {
+              "title": "What are User Profiles?",
+              "description": "User profiles are automatically created based on user behavior and device characteristics. Each profile contains information about device type, preferences, and behavior patterns to enable personalized checkout experiences."
+            },
+            "howCreated": {
+              "title": "How Profiles are Created",
+              "description": "Profiles are created automatically when users interact with your checkout. The system analyzes device type, browser, screen size, interaction patterns, and previous behavior to build comprehensive user profiles."
+            },
+            "benefits": {
+              "title": "Benefits of Personalization",
+              "description": "Personalized checkouts adapt to user preferences, showing optimized layouts, field orders, and messaging based on device type and behavior patterns. This can significantly improve conversion rates."
+            }
+          },
+          "deviceTypes": {
+            "title": "Device Types",
+            "detection": {
+              "title": "Device Detection",
+              "description": "The system automatically detects device type (Desktop, Mobile, Tablet) using browser and screen size information. This enables device-specific optimizations and layouts."
+            },
+            "types": {
+              "title": "Supported Device Types",
+              "description": "Three main device types are detected: Desktop (large screens, mouse/keyboard), Mobile (small screens, touch), and Tablet (medium screens, touch). Each type receives optimized experiences."
+            },
+            "personalization": {
+              "title": "Device-Based Personalization",
+              "description": "Different personalization rules apply based on device type. Mobile users may see simplified forms, while desktop users get more detailed options. This improves usability and conversion."
+            }
+          },
+          "metrics": {
+            "title": "Key Metrics",
+            "conversion": {
+              "title": "Conversion Rate",
+              "description": "The conversion rate for personalized sessions compared to non-personalized sessions. Higher rates indicate effective personalization strategies."
+            },
+            "profiles": {
+              "title": "Total Profiles",
+              "description": "The number of unique user profiles created in the selected period. More profiles mean better personalization coverage across your user base."
+            },
+            "improvement": {
+              "title": "Conversion Improvement",
+              "description": "The percentage improvement in conversion rate when personalization is applied. This metric shows the direct impact of personalization on your checkout performance."
+            }
+          },
+          "configuration": {
+            "title": "Configuration",
+            "rules": {
+              "title": "Personalization Rules",
+              "description": "Rules define how the checkout adapts to different user profiles and device types. You can configure field ordering, layout preferences, and messaging based on device and behavior patterns."
+            },
+            "settings": {
+              "title": "Personalization Settings",
+              "description": "Configure personalization features including device detection, profile creation, rule application, and A/B testing options. Settings can be adjusted to optimize for your specific use case."
+            }
+          },
+          "charts": {
+            "title": "Charts & Tables",
+            "deviceDistribution": {
+              "title": "Device Distribution Chart",
+              "description": "Shows the distribution of user profiles across different device types (Desktop, Mobile, Tablet). Helps understand your user base composition."
+            },
+            "conversion": {
+              "title": "Conversion by Device Chart",
+              "description": "Compares conversion rates between personalized and non-personalized sessions, broken down by device type. Shows the effectiveness of personalization for each device category."
+            },
+            "trend": {
+              "title": "Profiles Trend Chart",
+              "description": "Displays the creation and update frequency of user profiles over time. Helps track profile growth and identify trends in user behavior patterns."
+            },
+            "table": {
+              "title": "Profiles Table",
+              "description": "Lists individual user profiles with device type, creation date, last update, and associated metrics. Use this to analyze specific profile characteristics and behaviors."
+            }
+          }
         }
       },
       "optimization": {
@@ -858,6 +1005,78 @@
         "table": {
           "title": "Field Performance Details",
           "subtitle": "Detailed performance metrics for all fields"
+        },
+        "help": {
+          "title": "How Form Optimization Works",
+          "subtitle": "Learn about field optimization, step metrics, and performance improvements",
+          "fieldOptimization": {
+            "title": "Field Optimization",
+            "whatIs": {
+              "title": "What is Field Optimization?",
+              "description": "Field optimization uses AI to analyze form field performance and automatically optimize field order, labels, placeholders, and validation to improve conversion rates and reduce errors."
+            },
+            "howWorks": {
+              "title": "How Optimization Works",
+              "description": "The system analyzes completion rates, error frequencies, time spent, and user behavior for each field. Based on this data, it reorders fields, adjusts labels, and optimizes validation rules to improve the checkout experience."
+            },
+            "benefits": {
+              "title": "Benefits of Optimization",
+              "description": "Optimized forms reduce completion time, decrease error rates, and improve conversion. Fields are ordered by importance and completion likelihood, making the checkout process smoother and faster."
+            }
+          },
+          "stepMetrics": {
+            "title": "Step Metrics",
+            "steps": {
+              "title": "Checkout Steps",
+              "description": "The checkout is divided into steps (Cart, Profile, Shipping, Payment). Each step has its own metrics including completion rate, error rate, and average time to complete."
+            },
+            "completion": {
+              "title": "Completion Rate",
+              "description": "The percentage of users who successfully complete a step. Higher completion rates indicate better step design and optimization. Low rates may indicate friction points."
+            },
+            "errorRate": {
+              "title": "Error Rate",
+              "description": "The percentage of users who encounter errors while completing a step. Lower error rates mean better form design and validation. High error rates may indicate confusing fields or validation issues."
+            },
+            "timeToComplete": {
+              "title": "Time to Complete",
+              "description": "The average time users spend completing a step. Shorter times generally indicate better UX, but context matters - some steps naturally take longer (e.g., payment verification)."
+            }
+          },
+          "effectiveness": {
+            "title": "Optimization Effectiveness",
+            "conversion": {
+              "title": "Conversion Rate Improvement",
+              "description": "The improvement in conversion rate when optimization is applied. This metric compares optimized vs non-optimized sessions to measure the direct impact of field optimization."
+            },
+            "comparison": {
+              "title": "Optimized vs Non-Optimized",
+              "description": "Side-by-side comparison of conversion rates, completion times, and error rates between optimized and non-optimized checkouts. Shows the tangible benefits of optimization."
+            },
+            "improvement": {
+              "title": "Performance Improvement",
+              "description": "Overall improvement metrics including conversion rate increase, error reduction, and time savings. These metrics demonstrate the ROI of form optimization efforts."
+            }
+          },
+          "charts": {
+            "title": "Charts & Tables",
+            "effectiveness": {
+              "title": "Effectiveness Chart",
+              "description": "Shows conversion rates for optimized vs non-optimized checkouts, broken down by step. Helps identify which steps benefit most from optimization."
+            },
+            "fieldPerformance": {
+              "title": "Field Performance Chart",
+              "description": "Displays performance metrics for each field including completion rate, error rate, and average time. Helps identify fields that need optimization or are performing well."
+            },
+            "trend": {
+              "title": "Performance Trend Chart",
+              "description": "Shows field performance metrics over time, allowing you to track improvements and identify trends. Useful for measuring the impact of optimization changes."
+            },
+            "table": {
+              "title": "Fields Performance Table",
+              "description": "Detailed table listing all fields with their performance metrics, optimization status, and recommendations. Use this to identify specific fields that need attention."
+            }
+          }
         }
       },
       "settings": {
